# figma-kivy-previewer

./: .gitignore  pyproject.toml
src/figma_kivy_previewer/: app.py  generated.py  network_listener.py  preview.py  previewer.py  svg_instructions.py  text_instructions.py
