[project]
name = "figma-kivy-previewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Py-Swift", email = "psychowaspx@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "kivy>=2.3.1",
    "websocket>=0.2.1",
    "websockets>=13.0",
]

[project.scripts]
figma-kivy-previewer = "figma_kivy_previewer:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
